<resources>
    <string name="app_name">Test Android App</string>

    <string name="home_title">Bienvenue sur ma première application Android</string>
    <string name="home_subtitle">Application développée avec Kotlin</string>
    <string name="home_initial_message">Cliquez sur le bouton pour démarrer.</string>
    <string name="home_success_message">Bravo, l’interaction Kotlin fonctionne !</string>
    <string name="button_start">Commencer</string>
    <string name="toast_button_clicked">BIENVENUE</string>

    <string name="welcome_text">Première page de l’app</string>
    <string name="content_welcome">Présentation du futur banger de Ubisoft</string>
    <string name="picContent">Assassin’s Creed Black Flag: Resynced</string>
    <string name="content_welcome2">AC : Black Flag</string>
    <string name="placeholder">NEVER GONNA GIVE YOU UP, NEVER GONNA LET YOU DOWN, NEVER GO AROUND YOU, DESERT YOU</string>
    <string name="login">Login</string>
    <string name="register">Inscription</string>

    <string name="titleLogin">Se connecter</string>
    <string name="profile_picContent">My profile</string>
    <string name="textName">Name</string>
    <string name="profile_email_label">Adresse e-mail</string>
    <string name="profile_email_value">name@exemple.com</string>
    <string name="button_dash">Dashboard</string>

    <string name="register_title">Créer un compte</string>
    <string name="register_subtitle">Remplissez les informations ci-dessous pour créer votre compte.</string>
    <string name="label_full_name">Nom complet</string>
    <string name="hint_full_name">Exemple : Jean Doe</string>
    <string name="label_email">Adresse email</string>
    <string name="hint_email">exemple@email.com</string>
    <string name="label_password">Mot de passe</string>
    <string name="hint_password">Minimum 6 caractères</string>
    <string name="label_confirm_password">Confirmer le mot de passe</string>
    <string name="hint_confirm_password">Retapez le mot de passe</string>
    <string name="checkbox_terms">J’accepte les conditions d’utilisation</string>
    <string name="button_register">Créer mon compte</string>
    <string name="button_clear">Effacer le formulaire</string>
    <string name="success_register">Inscription réussie. Bienvenue !</string>
    <string name="form_ready">En attente de saisie...</string>
    <string name="error_full_name_required">Le nom complet est obligatoire.</string>
    <string name="error_email_required">L’adresse email est obligatoire.</string>
    <string name="error_email_invalid">L’adresse email n’est pas valide.</string>
    <string name="error_password_required">Le mot de passe est obligatoire.</string>
    <string name="error_password_too_short">Le mot de passe doit contenir au moins 6 caractères.</string>
    <string name="error_confirm_password_required">La confirmation est obligatoire.</string>
    <string name="error_passwords_not_matching">Les mots de passe ne correspondent pas.</string>
    <string name="error_terms_required">Vous devez accepter les conditions d’utilisation.</string>
    <string name="toast_register_success">Compte créé avec succès</string>
    <string name="toast_form_cleared">Formulaire effacé</string>

</resources>